<resources>
    <string name="app_name">Elegance</string>
    <string name="welcome_message">Welcome to Elegance</string>
    <string name="fashion_tagline">Women\'s Fashion Boutique</string>
    
    <!-- Auth -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    
    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    
    <!-- Contact Us -->
    <string name="contact_us_title">Contact Us</string>
    <string name="head_office_label">Head Office</string>
    <string name="head_office_address">123, Galle Road, Colombo 03, Sri Lanka</string>
    <string name="mobile_1">+94 77 123 4567</string>
    <string name="mobile_2">+94 71 890 1234</string>
</resources>
